<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".welcome.presentation.WelcomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageIconView"
            app:srcCompat="@drawable/pairshoes"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/space_beetwen"
            android:background="@drawable/shape"
            android:contentDescription="@string/image_of_a_shoe"
            android:elevation="50dp"
            android:foregroundGravity="center_horizontal" />


        <TextView
            android:id="@+id/welcome_introduction_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_introduction"
            style="@style/text_information_style" />

        <TextView
            android:id="@+id/welcome_finish_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_finishing"
            style="@style/text_information_style"/>

        <Button
            android:id="@+id/next_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_button"
            android:fontFamily="@font/roboto"
            android:text="@string/next" />
    </LinearLayout>
</layout>