<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shop.presentation.ShoeListDetailFragment">

    <data>

        <variable
            name="shoeDetailsViewModel"
            type="com.jrmnds.shoestore.shop.presentation.ShoesListViewModel" />
    </data>

<!--    Constrait Layout was chosen here because, i have more components, like imageView that i'm making invisible while the-->
<!--    user didn't pick a image of his gallery. Constraint Layout gives me more-->
<!--    possibilities to build my screen.-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/shoes_image_preview_id"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_150dp"
            android:contentDescription="@string/shoes_image_preview"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_image_id"
            style="@style/text_infor_detail_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dimen_5dp"
            android:text="@string/add_a_image"
            app:drawableStartCompat="@drawable/ic_baseline_image_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoes_image_preview_id" />

        <Button
            android:id="@+id/add_image_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/image"
            app:layout_constraintBaseline_toBaselineOf="@+id/add_image_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toEndOf="@+id/add_image_id" />

        <TextView
            android:id="@+id/shoe_name_id"
            style="@style/text_infor_detail_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_image_id" />

        <EditText
            android:id="@+id/shoe_name_label_id"
            style="@style/label_form_detail_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_the_shoe_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapSentences"
            android:text="@={shoeDetailsViewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_id" />

        <TextView
            android:id="@+id/shoes_company_id"
            style="@style/text_infor_detail_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label_id" />

        <EditText
            android:id="@+id/shoes_company_label_id"
            style="@style/label_form_detail_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_the_shoe_s_company"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapSentences"
            android:text="@={shoeDetailsViewModel.shoeCompany}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoes_company_id" />

        <TextView
            android:id="@+id/size_info_id"
            style="@style/text_infor_detail_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoes_company_label_id" />

        <EditText
            android:id="@+id/size_label_id"
            style="@style/label_form_detail_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_the_size"
            android:importantForAutofill="no"
            android:inputType="numberSigned|textCapSentences"
            android:text="@={shoeDetailsViewModel.shoeSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_info_id" />

        <TextView
            android:id="@+id/description_info_id"
            style="@style/text_infor_detail_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_label_id" />

        <EditText
            android:id="@+id/description_label_id"
            style="@style/label_form_detail_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/type_a_description"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapSentences"
            android:text="@={shoeDetailsViewModel.shoeDescription}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_info_id" />

        <Button
            android:id="@+id/save_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:fontFamily="@font/roboto"
            android:onClick="@{() -> shoeDetailsViewModel.setShoeData()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_label_id"
            app:layout_constraintVertical_bias="0.247" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>