<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    ConstraintLayout was chosen because here i need to build a much more complex view, with informations-->
<!--    about the shoe. So here i could choose my component and configure where it would suits better.-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_20dp"
            app:cardElevation="@dimen/space_button"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="@dimen/dimen_5dp"
            style="@style/main_card_style">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/shoe_image_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_150dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:background="@color/red_5"
                    android:contentDescription="@string/image_of_a_shoe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/pairshoes" />

                <TextView
                    android:id="@+id/size_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_24dp"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/size"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_baseline_size_in_full_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shoe_image_id" />

                <TextView
                    android:id="@+id/size_id_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_start_space"
                    android:textSize="@dimen/dimen_16sp"
                    android:fontFamily="@font/roboto"
                    app:layout_constraintBaseline_toBaselineOf="@+id/size_id"
                    app:layout_constraintStart_toEndOf="@+id/size_id"
                    tools:text="32" />

                <TextView
                    android:id="@+id/name_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_50dp"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:text="@string/name"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto"
                    app:drawableStartCompat="@drawable/ic_baseline_name_snippet_24"
                    app:layout_constraintBaseline_toBaselineOf="@+id/size_id"
                    app:layout_constraintStart_toEndOf="@+id/size_id_information" />

                <TextView
                    android:id="@+id/name_id_information"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_start_space"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:maxLines="2"
                    android:textSize="@dimen/dimen_16sp"
                    android:fontFamily="@font/roboto"
                    app:layout_constraintBaseline_toBaselineOf="@+id/size_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.066"
                    app:layout_constraintStart_toEndOf="@+id/name_id"
                    tools:text="Master Nike 26" />

                <TextView
                    android:id="@+id/company_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_24dp"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/company"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_baseline_card_travel_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/size_id" />

                <TextView
                    android:id="@+id/company_id_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_start_space"
                    android:fontFamily="@font/roboto"
                    android:textSize="@dimen/dimen_16sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/company_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/company_id"
                    tools:text="Nike" />

                <TextView
                    android:id="@+id/description_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_24dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/description"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_baseline_notes_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_id" />

                <TextView
                    android:id="@+id/description_id_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    android:fontFamily="@font/roboto"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.515"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_id"
                    tools:text="@string/instructions_second" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>